# tlaplus-state-graph-utils.py

./: .gitignore  README.md  TODO.md  mypy.ini  pyproject.toml  tladot-to-d2.sh  tladotjson-to-d2.py  tlaplus-dot-json-to-reasonable-json.py  tlaplus-dot-reasonable-json-to-d2.py
.github/workflows/: test-build-release.yml
dev/: render-test-examples.sh
src/tlaplus_dot_utils/: dot_json_to_reasonable_json.py  model.py  reasonable_json_to_d2.py  state_parsing.py  state_to_d2.py
src/tlaplus_dot_utils/cli/: __init__.py  convert.py  dot_json_to_reasonable_json.py  reasonable_json_to_d2.py  root.py
src/tlaplus_dot_utils/d2/: diagram.py  state.py
src/tlaplus_dot_utils/format_determination/: __init__.py
src/tlaplus_dot_utils/graph/: any_to_model.py  dot_json_to_model.py  dot_json_to_reasonable_json.py  model.py  model_to_d2.py  model_to_reasonable_json.py  reasonable_json_to_model.py
src/tlaplus_dot_utils/state/: __init__.py  model.py  model_to_d2.py  model_to_itf.py  model_to_reasonable_json.py  model_to_simple_structured_json.py  tlaplus_to_latex.py  tlaplus_to_model.py
src/tlaplus_dot_utils/utils/: jsonish.py  package_extras.py
src/tlaplus_state_graph_utils/cli/: __init__.py  root.py
src/tlaplus_state_graph_utils/format_determination/: __init__.py  formats.py
src/tlaplus_state_graph_utils/graph/: __init__.py  any_to_model.py  dot_json_to_model.py  dot_json_to_reasonable_json.py  model.py  model_to_d2.py
src/tlaplus_state_graph_utils/state/: model.py  model_to_itf.py  model_to_reasonable_json.py  tlaplus_to_model.py
src/tlaplus_state_graph_utils/utils/: package_extras.py
tests/: conftest.py  test_cli.py  test_dot_json_to_reasonable_json.py  test_reasonable_json_to_d2.py  test_state_parsing.py  test_state_to_d2.py
tests/data/: dot-json-example.json  expected-dot-json-example-to-reasonable.json
tests/data/long-example/: boxes-simple-values-inline-newline.d2  boxes-simple-values-inline.d2  boxes-simple-values-not-inline.d2  (+7 more)
tests/test_d2/: test_diagram.py  test_state.py
tests/test_graph/: test_any_to_model.py  test_dot_json_to_reasonable_json.py  test_model_to_d2.py  test_reasonable_json_to_model.py
tests/test_state/: test_model_to_d2.py  test_tlaplus_to_model.py
(+1 files in other folders)
