[project]
name = "tlaplus-state-graph-utils"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.scripts]
'tlaplus-state-graph-utils.py' = 'tlaplus_state_graph_utils.cli:main'

[project.optional-dependencies]
d2 = [
    "py-d2>=1.0.1,<2",
    "tree-sitter>=0.23.0,<0.24",
    "tree-sitter-tlaplus>=1.3.6,<2",
]
parse-state = [
    "tree-sitter>=0.23.0,<0.24",
    "tree-sitter-tlaplus>=1.3.6,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
]
